syntax = "proto3";

package commontype;

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.type";
option java_outer_classname = "SubInfoProtos";

message MatchInfo {
  string topicFilter = 1;
  string receiverId = 2;
}
